--- a/PetAdoptionAgencyProject/Views/Animals/Add.cshtml
+++ b/PetAdoptionAgencyProject/Views/Animals/Add.cshtml
@@ -8,18 +8,23 @@
 <h1> Add Animal</h1>
 <form method="post">
 
-
 <div class="mt-3">
     <label class="form-label">Name</label>
     <input type="text" class="form-control" asp-for="Name" />
-
 
 </div>
 
 <div class="mt-3">
     <label class="form-label">Species</label>
-    <input type="text" class="form-control" asp-for="Species" />
-
+    <select class="form-control" asp-for="Species" >
+        <option value = "">Select Species</option>
+        <option value ="Dog">Dog</option>
+        <option value="Cat">Cat</option>
+        <option value="Bird">Bird</option>
+        <option value="Reptile">Reptile</option>
+        <option value="Fish">Fish</option>
+        <option value="Rodent">Rodent</option>
+    </select>
 
 </div>
 
@@ -27,13 +32,11 @@
     <label class="form-label">Breed</label>
     <input type="text" class="form-control" asp-for="Breed" />
 
-
 </div>
 
 <div class="mt-3">
     <label class="form-label">Age</label>
     <input type="text" class="form-control" asp-for="Age" />
-
 
 </div>
 
@@ -41,11 +44,63 @@
     <label class="form-label">Weight</label>
     <input type="text" class="form-control" asp-for="Weight" />
 
+</div>
+
+<div class="mt-3">
+    <label class="form-label">Size</label>
+        <select class="form-control" asp-for="Size">
+            <option value="">Select Size</option>
+            <option value="XXS">XXS</option>
+            <option value="XS">XS</option>
+            <option value="S">S</option>
+            <option value="M">M</option>
+            <option value="L">L</option>
+            <option value="XL">XL</option>
+        </select>
 
 </div>
+
+ <div class="mt-3">
+     <label class="form-label">Adoption Fee</label>
+     <input type="text" class="form-control" asp-for="AdoptionFee" />
+
+ </div>
+
+
+    <div class="mt-3">
+        <label class="form--check-label" for="Subscribed">Child Friendly</label>
+        <input type="checkbox" class="form-check-input" id="ChildFriendly" asp-for="ChildFriendly" />
+
+    </div>
+
+    <div class="mt-3">
+        <label class="form--check-label" for="Subscribed">Animal Friendly</label>
+        <input type="checkbox" class="form-check-input" id="AnimalFriendly" asp-for="AnimalFriendly" />
+
+    </div>
+
+    <div class="mt-3">
+        <label class="form--check-label" for="Subscribed">Bonded</label>
+        <input type="checkbox" class="form-check-input" id="Bonded" asp-for="Bonded" />
+
+    </div>
+
+
+ <div class="mt-3">
+     <label class="form-label">Image Path</label>
+     <input type="text" class="form-control" asp-for="Image" />
+
+ </div>
 
 <div class="mt-3">
     <button type="submit" class="btn-primary">Save</button>
 
 </div>
+
+
+
+
+
+
+
 </form>
