--- a/PetAdoptionAgencyProject/Views/Animals/editAnimal.cshtml
+++ b/PetAdoptionAgencyProject/Views/Animals/editAnimal.cshtml
@@ -3,7 +3,7 @@
 *@
 @{
 }
-@model PetAdoptionAgencyProject.Models.Animal
+@model PetAdoptionAgencyProject.Models.Entities.Animal
 
 <h1> Edit Animal</h1>
 <form method="post">
@@ -20,13 +20,20 @@
         <label class="form-label">Name</label>
         <input type="text" class="form-control" asp-for="Name" />
 
-
     </div>
+
 
     <div class="mt-3">
         <label class="form-label">Species</label>
-        <input type="text" class="form-control" asp-for="Species" />
-
+        <select class="form-control" asp-for="Species">
+            <option value="">Select Species</option>
+            <option value="Dog">Dog</option>
+            <option value="Cat">Cat</option>
+            <option value="Bird">Bird</option>
+            <option value="Reptile">Reptile</option>
+            <option value="Fish">Fish</option>
+            <option value="Rodent">Rodent</option>
+        </select>
 
     </div>
 
@@ -34,13 +41,11 @@
         <label class="form-label">Breed</label>
         <input type="text" class="form-control" asp-for="Breed" />
 
-
     </div>
 
     <div class="mt-3">
         <label class="form-label">Age</label>
         <input type="text" class="form-control" asp-for="Age" />
-
 
     </div>
 
@@ -48,8 +53,54 @@
         <label class="form-label">Weight</label>
         <input type="text" class="form-control" asp-for="Weight" />
 
+    </div>
+
+    <div class="mt-3">
+        <label class="form-label">Size</label>
+        <select class="form-control" asp-for="Size">
+            <option value="">Select Size</option>
+            <option value="XXS">XXS</option>
+            <option value="XS">XS</option>
+            <option value="S">S</option>
+            <option value="M">M</option>
+            <option value="L">L</option>
+            <option value="XL">XL</option>
+        </select>
 
     </div>
+
+    <div class="mt-3">
+        <label class="form-label">Adoption Fee</label>
+        <input type="text" class="form-control" asp-for="AdoptionFee" />
+
+    </div>
+
+
+    <div class="mt-3">
+        <label class="form--check-label" for="Subscribed">Child Friendly</label>
+        <input type="checkbox" class="form-check-input" id="ChildFriendly" asp-for="ChildFriendly" />
+
+    </div>
+
+    <div class="mt-3">
+        <label class="form--check-label" for="Subscribed">Animal Friendly</label>
+        <input type="checkbox" class="form-check-input" id="AnimalFriendly" asp-for="AnimalFriendly" />
+
+    </div>
+
+    <div class="mt-3">
+        <label class="form--check-label" for="Subscribed">Bonded</label>
+        <input type="checkbox" class="form-check-input" id="Bonded" asp-for="Bonded" />
+
+    </div>
+
+
+    <div class="mt-3">
+        <label class="form-label">Image Path</label>
+        <input type="text" class="form-control" asp-for="Image" />
+
+    </div>
+
 
     <div class="mt-3">
         <button type="submit" class="btn-primary">Submit</button>
