--- a/PetAdoptionAgencyProject/Views/Shared/_Layout.cshtml
+++ b/PetAdoptionAgencyProject/Views/Shared/_Layout.cshtml
@@ -22,12 +22,13 @@
                         <li class="nav-item">
                             <a class="nav-link text-dark" asp-area="" asp-controller="Home" asp-action="Index">Home</a>
                         </li>
-                        <li class="nav-item">
-                            <a class="nav-link text-dark" asp-area="" asp-controller="Home" asp-action="Privacy">Privacy</a>
-                        </li>
+                        
                         <li class=" = "nav-item">
                             <a class="nav-link text-dark" asp-area="" asp-controller="Animals" asp-action="ListAnimals">All Residents</a>
-                        </li>"
+                        </li>
+                        <li class="nav-item">
+                            <a class="nav-link text-dark" asp-area="" asp-controller="Account" asp-action="Add">Add Animal</a>
+                        </li>
                     </ul>
                 </div>
             </div>
