--- a/PetAdoptionAgencyProject/wwwroot/css/site.css
+++ b/PetAdoptionAgencyProject/wwwroot/css/site.css
@@ -20,3 +20,42 @@ html {
 body {
   margin-bottom: 60px;
 }
+
+.white_content{
+    position: fixed;
+    top: 50%;
+    left:50%;
+    transform: translate(-50%, -50%);
+    width: 800px;
+    height: 600px;
+    background-color: #fff;
+    display: none;
+    z-index: 100;
+    border-radius: 20px;
+
+}
+
+.black_content {
+    display: none;
+    position: fixed;
+    top: 0%;
+    left: 0%;
+    width: 100%;
+    height: 100%;
+    background-color: black;
+    opacity: .70;
+    z-index: 90;
+}
+
+.link {
+    text-decoration: none;
+}
+
+.linktext {
+    color: #007bff;
+    font-size: 18px;
+}
+
+body.modal-open {
+    overflow: hidden; /* Prevent scrolling when modal is open */
+}
